# SimpleJucePluginTemplate

./: .gitignore  CMakeLists.txt  README.md
